<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory 
        android:title="@string/pref_category_display" >
        
        <ListPreference 
            android:title="@string/pref_choose_theme"
			android:key="theme_select_listpref_key" 
            android:entries="@array/array_entries_listpref_apptheme" 
            android:entryValues="@array/array_entryvalues_listpref_apptheme" 
            android:defaultValue="0" />
        	<!-- android:defaultValue="JAppTheme_Light" -->
    </PreferenceCategory>
    <PreferenceCategory
       android:title="@string/pref_category_general" >
        
        <PreferenceScreen android:title="@string/pref_about_title" android:summary="@string/pref_about_summary">
            
            <intent  android:action="android.intent.action.VIEW"
                android:targetPackage="com.jhuntington.android.esfit" 
                android:targetClass="com.jhuntington.android.esfit.ui.AboutActivity" /> 
            
        </PreferenceScreen>
        
    </PreferenceCategory>
    

</PreferenceScreen>