<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

	<TableLayout 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:stretchColumns="*"
		android:shrinkColumns="*" >
		
		<TableRow
			android:id="@+id/tableRowAge"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp" >
	
			<TextView
				android:id="@+id/textViewAge"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/txtAge" />
	
			<EditText
				android:id="@+id/editTextAge"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ems="10"
				android:inputType="number" >
	              <requestFocus />
			</EditText>
	
		</TableRow>
	      
	    <TableRow
			android:id="@+id/tableRowWeigt"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >
	
			<TextView
				android:id="@+id/textViewWeight"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/txtWeight" />
	
			<EditText
				android:id="@+id/editTextWeight"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ems="10"
				android:inputType="number" />
	
		</TableRow>
	
	    <TableRow
	        android:id="@+id/tableRowTriceps"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textViewTriceps"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txtTriceps" />
	
	        <EditText
	            android:id="@+id/editTextTriceps"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:inputType="numberDecimal" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRowPectoral"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textViewPectoral"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txtPectoral" />
	
	        <EditText
	            android:id="@+id/editTextPectoral"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:inputType="numberDecimal" />
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRowMidaxilla"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textViewMidaxilla"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txtMidaxilla" />
	
	        <EditText
	            android:id="@+id/editTextMidaxilla"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:inputType="numberDecimal" />
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRowSubscapula"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textViewSubscapula"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txtSubscapula" />
	
	        <EditText
	            android:id="@+id/editTextSubscapula"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:inputType="numberDecimal" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRowAbdomen"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textViewAbdomen"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txtAbdomen" />
	
	        <EditText
	            android:id="@+id/editTextAbdomen"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:inputType="numberDecimal" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRowSuprailiac"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textViewSuprailiac"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txtSuprailiac" />
	
	        <EditText
	            android:id="@+id/editTextSuprailiac"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:inputType="numberDecimal" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRowQuadriceps"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textViewQuadriceps"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txtQuadriceps" />
	
	        <EditText
	            android:id="@+id/editTextQuadriceps"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:inputType="numberDecimal" />
	
	    </TableRow>
	    
		<View
	          android:layout_height="2dp"
	          android:layout_marginBottom="10dp"
	          android:layout_marginTop="5dp"
	          android:background="#33B5E5" />
	
	
	    <TableRow
	        android:id="@+id/tableRowButtons"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
			
	        <Button 
	            android:id="@+id/btnReset"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txtReset" />
	        
	
	        <Button
	            android:id="@+id/btnCalc"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txtCalculate" />
	
	    </TableRow>
	    
	    <View
	          android:layout_height="2dp"
	          android:layout_marginBottom="10dp"
	          android:layout_marginTop="5dp"
	          android:background="#33B5E5" />
	
	
	    <TableRow
	        android:id="@+id/tableRowBodyDensity"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        
	        <TextView 
	            android:id="@+id/textViewBodyDensity"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txtBodyDensity" />
	        
	        <TextView
	            android:id="@+id/textViewResultBodyDensity"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRowPercentFat"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="10dp" >
	        
	        <TextView
	            android:id="@+id/textViewPercentFat"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/txtPercentFat"
	            style="@style/TextBig" />
	        
	        <TextView
	           android:id="@+id/textViewResultPercentFat"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           style="@style/TextBig" />
	
	    </TableRow>
		
	</TableLayout>
</ScrollView>